<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.igormaznitsa</groupId>
    <artifactId>ravikoodi</artifactId>
    <version>1.2.0-SNAPSHOT</version>
    <packaging>pom</packaging>

    <description>Server to broadcast media content to KODI compatible media players</description>

    <url>https://github.com/raydac/ravikoodi-server</url>

    <inceptionYear>2018</inceptionYear>

    <properties>
        <java.version>11</java.version>
        <maven.compiler.release>11</maven.compiler.release>
        <maven.compiler.source>11</maven.compiler.source>
        <maven.compiler.target>11</maven.compiler.target>
    </properties>

    <issueManagement>
        <system>GitHub Issues</system>
        <url>https://github.com/raydac/ravikoodi-server/issues</url>
    </issueManagement>

    <scm>
        <url>https://github.com/raydac/ravikoodi-server</url>
        <connection>scm:git:git://github.com/raydac/ravikoodi-server.git</connection>
        <developerConnection>scm:git:git@github.com:raydac/ravikoodi-server.git</developerConnection>
    </scm>

    <organization>
        <name>Igor Maznitsa</name>
        <url>http://www.igormaznitsa.com</url>
    </organization>

    <licenses>
        <license>
            <name>The Apache Software License, Version 2.0</name>
            <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
            <distribution>repo</distribution>
        </license>
    </licenses>

    <profiles>
        <profile>
            <id>publish</id>
            <modules>
                <module>ravikoodi-win-launcher</module>
            </modules>
        </profile>
    </profiles>

    <modules>
        <module>ravikoodi-app</module>
    </modules>
    
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-enforcer-plugin</artifactId>
                <version>3.5.0</version>
                <executions>
                    <execution>
                        <id>enforce-rules</id>
                        <goals>
                            <goal>enforce</goal>
                        </goals>
                        <configuration>
                            <rules>
                                <dependencyConvergence/>
                                <banDuplicatePomDependencyVersions/>
                            </rules>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>    
    </build>    
</project>
